--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,10 @@
 			<version>2.1.4</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 	</dependencies>
 
